--- a/ISDN_3150_Mid-Term/src/App.css
+++ b/ISDN_3150_Mid-Term/src/App.css
@@ -1,8 +1,17 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+/* src/App.css */
+.app {
+  text-align: center;
+}
+
+.header, .main, .footer {
+  border: 1px solid black;
+  margin: 10px;
 }
 
 .logo {
