--- a/ISDN_3150_Mid-Term/src/index.css
+++ b/ISDN_3150_Mid-Term/src/index.css
@@ -5,12 +5,69 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: linear-gradient(to bottom, #0A256A, #091943);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.header {
+  width: 100%;
+  height: 20vh;
+  border: 1px solid #646cff;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: inherit; /* Ensure it inherits the background from :root */
+}
+
+.main {
+  margin: 0;
+  margin-top: 20vh;
+}
+
+.footer {
+  width: 100%;
+  height: 10vh;
+  border: 1px solid #646cff;
+  margin: 0; 
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background: inherit; /* Ensure it inherits the background from :root */
+  border-top: 1px solid #FFA3EC; /* Add neon pink border on the top */
+  box-shadow: 0 -5px 15px #FFA3EC; /* Add neon pink glow effect */
+  border-top-left-radius: 20px; /* Rounded corner on the bottom left */
+  border-top-right-radius: 20px; /* Rounded corner on the bottom right */
+}
+
+.footer nav {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.footer nav button {
+  background-color: transparent;
+}
+
+.footer nav button img { /* Assuming the icon is an image */
+  width: 60px; /* Set the desired width */
+  height: 60px; /* Set the desired height */
+}
+
+.AI-button {
+  width: 20%; /* Set the desired width */
+}
+
+.AI-button img {
+  width: 100px; /* Set the desired width */
+  height: 100px; /* Set the desired height */
 }
 
 a {
@@ -24,10 +81,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 70vh;
 }
 
 h1 {
@@ -38,7 +94,6 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
