--- a/ISDN_3150_Mid-Term/src/App.css
+++ b/ISDN_3150_Mid-Term/src/App.css
@@ -49,3 +49,17 @@
 .read-the-docs {
   color: #888;
 }
+
+/* App.css */
+.fade-out {
+  animation: fadeOut 0.5s ease-out forwards 0.5s;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
