--- a/ISDN_3150_Mid-Term/src/App.css
+++ b/ISDN_3150_Mid-Term/src/App.css
@@ -7,11 +7,109 @@
 /* src/App.css */
 .app {
   text-align: center;
+  overflow-y: hidden;
 }
 
-.header, .main, .footer {
-  border: 1px solid black;
-  margin: 10px;
+.header {
+  width: 100%;
+  height: 10vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: inherit; /* Ensure it inherits the background from :root */
+}
+
+.header img {
+  padding-top: 3%;
+  width: 60%;
+}
+
+.main {
+  align-items: end;
+  margin-top: 10vh;
+  padding: 5%;
+  overflow-y: hidden;
+  
+}
+
+.neon-text {
+  text-align: left;
+  color: #F93166; /* Neon pink color */
+  font-family: 'Advent Pro', bold Italic; /* Example of a special font, ensure to import it in your HTML or CSS */
+  text-shadow: 0 0 3px #F93166, 0 0 6px #F93166, 0 0 12px; /* Reduced neon glow effect */
+}
+
+.product {
+  border: 5px solid;
+  border-image-slice: 1;
+  border-width: 5px;
+  border-image-source: linear-gradient(45deg, #F93166, #FFA3EC);
+  padding: 20px;
+  margin: 20px;
+  text-align: left;
+  border-radius: 20px; /* Increased border-radius for rounder corners */
+}
+
+.summer-sales {
+  position: relative;
+  border: 5px solid;
+  border-image-slice: 1;
+  border-width: 5px;
+  border-image-source: linear-gradient(45deg, #F93166, #FFA3EC); /* Gradient for summer theme */
+  padding: 40px;
+  margin: 40px;
+  text-align: center;
+  border-radius: 20px;
+}
+
+.summer-sales h3 {
+  position: absolute;
+  top: -30px; /* Adjust as needed to overlay on the border */
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0 10px; /* Add some padding to the text */
+  color: #B7CCFF; /* Summer theme color */
+  font-family: 'Advent Pro', bold Italic; /* Ensure to import this font */
+  text-shadow: 0 0 3px #FF4500, 0 0 6px #FF4500, 0 0 12px; /* Neon glow effect */
+}
+
+.footer {
+  width: 100%;
+  height: 10vh;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background: inherit; /* Ensure it inherits the background from :root */
+  border-top: 1px solid #FFA3EC; /* Add neon pink border on the top */
+  box-shadow: 0 -5px 15px #FFA3EC; /* Add neon pink glow effect */
+  border-top-left-radius: 30px; /* Rounded corner on the bottom left */
+  border-top-right-radius: 30px; /* Rounded corner on the bottom right */
+}
+
+.footer nav {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.footer nav button {
+  background-color: transparent;
+}
+
+.footer nav button img { /* Assuming the icon is an image */
+  width: 60px; /* Set the desired width */
+  height: 60px; /* Set the desired height */
+}
+
+.AI-button {
+  width: 20%; /* Set the desired width */
+}
+
+.AI-button img {
+  width: 100px; /* Set the desired width */
+  height: 100px; /* Set the desired height */
 }
 
 .logo {
