Added more products

--- a/ISDN_3150_Mid-Term/src/App.css
+++ b/ISDN_3150_Mid-Term/src/App.css
@@ -167,9 +167,19 @@
   left: 0;
   background: inherit; /* Ensure it inherits the background from :root */
   border-top: 1px solid #FFA3EC; /* Add neon pink border on the top */
-  box-shadow: 0 -5px 15px #FFA3EC; /* Add neon pink glow effect */
+  box-shadow: 0 -5px 15px #FFA3EC; /* Initial neon pink glow effect */
   border-top-left-radius: 30px; /* Rounded corner on the bottom left */
   border-top-right-radius: 30px; /* Rounded corner on the bottom right */
+  animation: glowPulse 2s infinite; /* Add animation for periodic glow */
+}
+
+@keyframes glowPulse {
+  0%, 100% {
+    box-shadow: 0 -5px 15px #FFA3EC; /* Hard glow */
+  }
+  50% {
+    box-shadow: 0 -5px 15px #fdccf4; /* Soft glow */
+  }
 }
 
 .footer nav {
