--- a/ISDN_3150_Mid-Term/src/App.css
+++ b/ISDN_3150_Mid-Term/src/App.css
@@ -184,6 +184,17 @@ p {
   background-color: #FF69B4; /* Change background on hover */
 }
 
+.cart-count {
+  background-color: #FF69B4;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+  position: relative;
+  top: -48px;
+  left: -10px;
+}
+
 .summer-sales {
   position: relative;
   border: 5px solid;
