--- a/ISDN_3150_Mid-Term/src/User.css
+++ b/ISDN_3150_Mid-Term/src/User.css
@@ -5,7 +5,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
     padding: 20px;
-    width: 300px;
+    width: 450px;
     text-align: center;
   }
   
@@ -15,8 +15,9 @@
   }
   
   .user-info p {
-    font-size: 16px;
+    font-size: 23px;
     margin: 5px 0;
+    padding: 5px;
   }
   
   .edit-button {
