--- a/ISDN_3150_Mid-Term/src/AIChatpage.css
+++ b/ISDN_3150_Mid-Term/src/AIChatpage.css
@@ -81,6 +81,7 @@
     color: #e0e0e0; /* Light text color */
     padding-left: 1;
     line-height: 1.5em; /* Better line spacing */
+    font-family: 'Advent Pro', italic; /* Use the correct font-family */
 }
 
 .message ul, .message ol {
