--- a/ISDN_3150_Mid-Term/src/App.css
+++ b/ISDN_3150_Mid-Term/src/App.css
@@ -230,6 +230,7 @@ p {
   border-top-left-radius: 30px; /* Rounded corner on the bottom left */
   border-top-right-radius: 30px; /* Rounded corner on the bottom right */
   animation: glowPulse 2s infinite; /* Add animation for periodic glow */
+  z-index: 1000;
 }
 
 @keyframes glowPulse {
