--- a/ISDN_3150_Mid-Term/src/ProductPage.css
+++ b/ISDN_3150_Mid-Term/src/ProductPage.css
@@ -4,9 +4,51 @@
     align-items: center;
     border: 1px solid #ccc;
     padding: 10px;
-    width: 90%; /* Adjust width as needed */
+    width: 100%; /* Adjust width as needed */
     text-align: left;
 }
+
+.product-3dmodel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1000; /* Ensure it overlays other elements */
+  }
+
+.Blank_Space {
+    height: 30vh; /* 30% of the viewport height */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.neon-button {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #db7ddb;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 1001; /* High z-index to overlay other elements */
+    box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff00ff;
+    transition: all 0.3s ease-in-out;
+}
+
+.neon-button:hover {
+    box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px #ff00ff, 0 0 70px #ff00ff;
+}
+  
+  .product-3dmodel canvas {
+    width: 100%;
+    height: 100%;
+  }  
 
 .product img {
     width: 100px;
@@ -16,7 +58,7 @@
 }
 
 .product-description {
-    max-height: 10vh; /* 10% of the viewport height */
+    max-height: 7vh; /* 10% of the viewport height */
     overflow-y: auto; /* Enable vertical scroll and show scrollbar when needed */
 }
 
@@ -68,16 +110,9 @@
     color: red;
     align-self: flex-end;
 }
-
-.product-3dmodel {
-    height: 40%;
-    width: 90%;
-    margin: 20px 0;
-}
-
+å
 .product-main {
-    display: flex;
-    justify-content: space-between;
+    display: flex;å
     width: 100%;
 }
 
