3D model looking correct with Tag line

--- a/ISDN_3150_Mid-Term/src/App.css
+++ b/ISDN_3150_Mid-Term/src/App.css
@@ -60,6 +60,24 @@ h1 {
   text-shadow: 0 0 3px #F93166, 0 0 6px #F93166, 0 0 12px; /* Reduced neon glow effect */
 }
 
+h2
+{
+  text-align: left;
+  color: #F93166; /* Neon pink color */
+  font-family: 'Advent Pro Italic', italic; /* Use the correct font-family */
+  text-shadow: 0 0 3px #F93166, 0 0 6px #F93166; /* Reduced neon glow effect */
+}
+
+
+h3
+{
+  text-align: left;
+  color: #F93166; /* Neon pink color */
+  font-family: 'Advent Pro', italic; /* Use the correct font-family */
+  text-shadow: 0 0 3px #F93166; /* Reduced neon glow effect */
+}
+
+
 p {
   text-align: left;
   color: #B7CCFF; /* Neon pink color */
