Tagline change to h3

--- a/ISDN_3150_Mid-Term/src/App.css
+++ b/ISDN_3150_Mid-Term/src/App.css
@@ -73,7 +73,7 @@ h3
 {
   text-align: left;
   color: #F93166; /* Neon pink color */
-  font-family: 'Advent Pro', italic; /* Use the correct font-family */
+  font-family: 'Advent Pro Italic', italic; /* Use the correct font-family */
   text-shadow: 0 0 3px #F93166; /* Reduced neon glow effect */
 }
 
